--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,20 @@
 body{
     background-image: url('images/background.png');
+    font-family: 'Roboto', sans-serif;
+}
+.mdperror{
+    text-align: center;
+    margin-top: 15em;
+}
+.connexion{
+    text-align: center;
 }
 h1{
     text-align: center;
+    font-family: 'Comforter', cursive;
+    font-size: 48;
+    margin-top: 2em;
+}
+.messagerie{
+    background-color: blue;
 }
